--- a/cloud/cloud_translate.ipynb
+++ b/cloud/cloud_translate.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "import codecs"
+    "import codecs\n",
+    "import re"
    ]
   },
   {
@@ -78,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3292056420937072\n"
+      "0.5719652273303247\n"
      ]
     }
    ],
@@ -96,8 +97,8 @@
     "en_file = codecs.open('../clean/en_zu/enzu_parallel.test.en', 'r')\n",
     "zu_file = codecs.open('../clean/en_zu/enzu_parallel.test.zu', 'r')\n",
     "\n",
-    "en_sents = [line.rstrip('\\n') for line in en_file.readlines()]\n",
-    "zu_sents = [line.rstrip('\\n') for line in zu_file.readlines()]\n",
+    "en_sents = [re.sub(' +', ' ', line.rstrip(' \\n')) for line in en_file.readlines()]\n",
+    "zu_sents = [re.sub(' +', ' ', line.rstrip(' \\n')) for line in zu_file.readlines()]\n",
     "\n",
     "# translate\n",
     "if not os.path.exists('./translated.zu'):\n",
@@ -124,7 +125,7 @@
     "trans_sents = [line.rstrip('\\n').split(' ') for line in trans_file.readlines()]\n",
     "num_trans = len(trans_sents)\n",
     "\n",
-    "zu_refs = [[line.split(' ')] for line in zu_sents]\n",
+    "zu_refs = [[re.sub(r'\\s+([?.!,\"])', r'\\1', line).split(' ')] for line in zu_sents]\n",
     "\n",
     "bleu_score = corpus_bleu(zu_refs[:num_trans], trans_sents)\n",
     "\n",
@@ -132,7 +133,76 @@
     "\n",
     "trans_file.close()\n",
     "en_file.close()\n",
-    "zu_fie.clos"
+    "zu_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "new road signs as and when required on various roads located within the Western regions of eThekwini Municipality refundable tender charge -\n",
+      "[['pawu', 'ezintsha', 'ngaleso', 'sikhathi', 'okuyodingeka', 'ngaso', 'emigwaqweni', 'eyahlukahlukene', 'esifundeni', 'esiseNtshonalanga', 'kuMasipala', 'waseThekwini', 'okhokhelwa', 'ithenda', 'ongeke', 'ubuye', '-', 'ukheshe', 'noma']]\n",
+      "['izimpawu', 'ezintsha', 'zomgwaqo', 'njengoba', 'kudingeke', 'emigwaqweni', 'ehlukahlukene', 'eNtshonalanga', 'yeMasipala', 'waseThekwini', 'imali', 'ekhokhelwa', 'ithenda', '-']\n",
+      "9.854024633657089e-232\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\nltk\\translate\\bleu_score.py:523: UserWarning: \n",
+      "The hypothesis contains 0 counts of 2-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\nltk\\translate\\bleu_score.py:523: UserWarning: \n",
+      "The hypothesis contains 0 counts of 3-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\nltk\\translate\\bleu_score.py:523: UserWarning: \n",
+      "The hypothesis contains 0 counts of 4-gram overlaps.\n",
+      "Therefore the BLEU score evaluates to 0, independently of\n",
+      "how many N-gram overlaps of lower order it contains.\n",
+      "Consider using lower n-gram order or use SmoothingFunction()\n",
+      "  warnings.warn(_msg)\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 51\n",
+    "\n",
+    "print(en_sents[n])\n",
+    "print(zu_refs[n])\n",
+    "print(trans_sents[n])\n",
+    "print(sentence_bleu(zu_refs[n], trans_sents[n]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Imibhalo yamathenda itholakala eThekwini Electricity , 1 Jelf Taylor Crescent , Durban ngo 08:00 kuya ku 15:00 , ngeMisombuluko kuya'"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zu_sents[0]"
    ]
   },
   {
