--- a/cloud/cloud_translate.ipynb
+++ b/cloud/cloud_translate.ipynb
@@ -95,14 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.546014989687105\n"
+      "BLEU1: 27.090\n",
+      "BLEU4: 7.546\n"
      ]
     }
    ],
@@ -144,9 +145,11 @@
     "\n",
     "zu_refs = [[re.sub(r'\\s+([?.!,\"])', r'\\1', line).split(' ')] for line in zu_sents]\n",
     "\n",
-    "bleu_score = corpus_bleu(zu_refs[:num_trans], trans_sents)\n",
+    "bleu_1 = corpus_bleu(zu_refs[:num_trans], trans_sents, weights=(1, 0, 0, 0))*100\n",
+    "bleu_4 = corpus_bleu(zu_refs[:num_trans], trans_sents)*100\n",
     "\n",
-    "print(bleu_score*100)\n",
+    "print('BLEU1: %.3f' %bleu_1)\n",
+    "print('BLEU4: %.3f' %bleu_4)\n",
     "\n",
     "trans_file.close()\n",
     "en_file.close()\n",
