--- a/cloud/cloud_translate.ipynb
+++ b/cloud/cloud_translate.ipynb
@@ -213,152 +213,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Translated 20 sentences\n",
-      "Translated 40 sentences\n",
-      "Translated 60 sentences\n",
-      "Translated 80 sentences\n",
-      "Translated 100 sentences\n",
-      "Translated 120 sentences\n",
-      "Translated 140 sentences\n",
-      "Translated 160 sentences\n",
-      "Translated 180 sentences\n",
-      "Translated 200 sentences\n",
-      "Translated 220 sentences\n",
-      "Translated 240 sentences\n",
-      "Translated 260 sentences\n",
-      "Translated 280 sentences\n",
-      "Translated 300 sentences\n",
-      "Translated 320 sentences\n",
-      "Translated 340 sentences\n",
-      "Translated 360 sentences\n",
-      "Translated 380 sentences\n",
-      "Translated 400 sentences\n",
-      "Translated 420 sentences\n",
-      "Translated 440 sentences\n",
-      "Translated 460 sentences\n",
-      "Translated 480 sentences\n",
-      "Translated 500 sentences\n",
-      "Translated 520 sentences\n",
-      "Translated 540 sentences\n",
-      "Translated 560 sentences\n",
-      "Translated 580 sentences\n",
-      "Translated 600 sentences\n",
-      "Translated 620 sentences\n",
-      "Translated 640 sentences\n",
-      "Translated 660 sentences\n",
-      "Translated 680 sentences\n",
-      "Translated 700 sentences\n",
-      "Translated 720 sentences\n",
-      "Translated 740 sentences\n",
-      "Translated 760 sentences\n",
-      "Translated 780 sentences\n",
-      "Translated 800 sentences\n",
-      "Translated 820 sentences\n",
-      "Translated 840 sentences\n",
-      "Translated 860 sentences\n",
-      "Translated 880 sentences\n",
-      "Translated 900 sentences\n",
-      "Translated 920 sentences\n",
-      "Translated 940 sentences\n",
-      "Translated 960 sentences\n",
-      "Translated 980 sentences\n",
-      "Translated 1000 sentences\n",
-      "Translated 1020 sentences\n",
-      "Translated 1040 sentences\n",
-      "Translated 1060 sentences\n",
-      "Translated 1080 sentences\n",
-      "Translated 1100 sentences\n",
-      "Translated 1120 sentences\n",
-      "Translated 1140 sentences\n",
-      "Translated 1160 sentences\n",
-      "Translated 1180 sentences\n",
-      "Translated 1200 sentences\n",
-      "Translated 1220 sentences\n",
-      "Translated 1240 sentences\n",
-      "Translated 1260 sentences\n",
-      "Translated 1280 sentences\n",
-      "Translated 1300 sentences\n",
-      "Translated 1320 sentences\n",
-      "Translated 1340 sentences\n",
-      "Translated 1360 sentences\n",
-      "Translated 1380 sentences\n",
-      "Translated 1400 sentences\n",
-      "Translated 1420 sentences\n",
-      "Translated 1440 sentences\n",
-      "Translated 1460 sentences\n",
-      "Translated 1480 sentences\n",
-      "Translated 1500 sentences\n",
-      "Translated 1520 sentences\n",
-      "Translated 1540 sentences\n",
-      "Translated 1560 sentences\n",
-      "Translated 1580 sentences\n",
-      "Translated 1600 sentences\n",
-      "Translated 1620 sentences\n",
-      "Translated 1640 sentences\n",
-      "Translated 1660 sentences\n",
-      "Translated 1680 sentences\n",
-      "Translated 1700 sentences\n",
-      "Translated 1720 sentences\n",
-      "Translated 1740 sentences\n",
-      "Translated 1760 sentences\n",
-      "Translated 1780 sentences\n",
-      "Translated 1800 sentences\n",
-      "Translated 1820 sentences\n",
-      "Translated 1840 sentences\n",
-      "Translated 1860 sentences\n",
-      "Translated 1880 sentences\n",
-      "Translated 1900 sentences\n",
-      "Translated 1920 sentences\n",
-      "Translated 1940 sentences\n",
-      "Translated 1960 sentences\n",
-      "Translated 1980 sentences\n",
-      "Translated 2000 sentences\n",
-      "Translated 2020 sentences\n",
-      "Translated 2040 sentences\n",
-      "Translated 2060 sentences\n",
-      "Translated 2080 sentences\n",
-      "Translated 2100 sentences\n",
-      "Translated 2120 sentences\n",
-      "Translated 2140 sentences\n",
-      "Translated 2160 sentences\n",
-      "Translated 2180 sentences\n",
-      "Translated 2200 sentences\n",
-      "Translated 2220 sentences\n",
-      "Translated 2240 sentences\n",
-      "Translated 2260 sentences\n",
-      "Translated 2280 sentences\n",
-      "Translated 2300 sentences\n",
-      "Translated 2320 sentences\n",
-      "Translated 2340 sentences\n",
-      "Translated 2360 sentences\n",
-      "Translated 2380 sentences\n",
-      "Translated 2400 sentences\n",
-      "Translated 2420 sentences\n",
-      "Translated 2440 sentences\n",
-      "Translated 2460 sentences\n",
-      "Translated 2480 sentences\n",
-      "Translated 2500 sentences\n",
-      "Translated 2520 sentences\n",
-      "Translated 2540 sentences\n",
-      "Translated 2560 sentences\n",
-      "Translated 2580 sentences\n",
-      "Translated 2600 sentences\n",
-      "Translated 2620 sentences\n",
-      "Translated 2640 sentences\n",
-      "Translated 2660 sentences\n",
-      "Translated 2680 sentences\n",
-      "Translated 2700 sentences\n",
-      "Translated 2720 sentences\n",
-      "Translated 2740 sentences\n",
-      "Translated 2760 sentences\n",
-      "Translated 2780 sentences\n"
+      "BLEU1: 53.443\n",
+      "BLEU4: 27.553\n"
      ]
     }
    ],
@@ -408,7 +271,7 @@
     "\n",
     "trans_file.close()\n",
     "en_file.close()\n",
-    "zu_file.close()"
+    "af_file.close()"
    ]
   },
   {
@@ -433,47 +296,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CS .0171 Annual contract for the supply , delivery , installation , testing and commissioning of fibre network monitoring system for 12/24/36 month period Closing date: 18 May 2007\n",
-      "[['CS.0171', 'Inkontileka', 'yonyaka', 'yokuthengisela,', 'ukudiliva,', 'ukufaka,', 'ukuhlola', 'nokubeka', 'esimweni', 'sokusebenza', 'i-fibre', 'network', 'monitoring', 'system', 'izinyanga', 'ezingu', '12/24/36', 'Kuvalwa:', '18', 'Meyi', '2007']]\n",
-      "['CS', '.0171', 'Inkontileka', 'yonyaka', 'yokuhlinzeka,', 'ukulethwa,', 'ukufakwa,', 'ukuhlolwa', 'nokuthunyelwa', 'kohlelo', 'lokuqapha', 'kwenethiwekhi', 'ye-fibre', 'ngo', '12/24/36', 'inyanga', 'inyanga', 'yokuvalwa:', '18', 'Meyi', '2007']\n",
-      "2.6616657200018398e-76\n"
+      "Home > Directories > Glossary: U\r\n",
+      "[['Tuisblad', '>', 'Gidse', '>', 'Woordelys:', 'U\\r']]\n",
+      "['Tuisblad&gt;', 'Gidse&gt;', 'Woordelys:', 'U']\n",
+      "7.813508425061864e-230\n"
      ]
     }
    ],
    "source": [
-    "n = 65\n",
+    "n = 68\n",
     "\n",
     "print(en_sents[n])\n",
     "print(af_refs[n])\n",
     "print(trans_sents[n])\n",
     "print(sentence_bleu(af_refs[n], trans_sents[n])*100)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Imibhalo yamathenda itholakala eThekwini Electricity , 1 Jelf Taylor Crescent , Durban ngo 08:00 kuya ku 15:00 , ngeMisombuluko kuya'"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "zu_sents[0]"
    ]
   }
  ],
